2005-01-06  Bruno Haible  <bruno@clisp.org>

	* strpbrk.c: Update from gnulib.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* strcspn.c: Update from gnulib.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* strcasecmp.c: Update from gnulib.
	* strncasecmp.c: Update from gnulib.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* stpncpy.h: Update from gnulib.
	* stpncpy.c: Update from gnulib with simplifications.
	* Makefile.am (libgettextlib_la_SOURCES): Remove stpncpy.h, stpncpy.c.
	(LIBADD_SOURCE): Add stpncpy.h, stpncpy.c.
	* Makefile.msvc: Update.
	* Makefie.vms: Update.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* error.h: Update from gnulib.
	* error.c: Update from gnulib.
	* Makefile.am (libgettextlib_la_SOURCES): Remove error.h, error.c.
	(LIBADD_SOURCE): Add error.h, error.c here.
	* Makefile.msvc: Update.
	* Makefile.vms: Update.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* argmatch.h: Update from gnulib, with DLL_VARIABLE modifications.
	* argmatch.c: Update from gnulib.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* quote.h: New file, from gnulib.
	* quote.c: New file, from gnulib.
	* Makefile.am (libgettextlib_la_SOURCES): Add quote.h, quote.c.
	* Makefile.msvc (OBJECTS): Add quote.obj.
	(quote.obj): New rule.
	* Makefile.vms (OBJECTS): Add quote.obj.
	(quote.obj): New rule.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* exitfail.h: New file, from gnulib.
	* exitfail.c: New file, from gnulib.
	* Makefile.am (libgettextlib_la_SOURCES): Add exitfail.h, exitfail.c.
	* Makefile.msvc (OBJECTS): Add exitfail.obj.
	(exitfail.obj): New rule.
	* Makefile.vms (OBJECTS): Add exitfail.obj.
	(exitfail.obj): New rule.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (libgettextlib_la_SOURCES): Remove getopt files.
	(LIBADD_SOURCE): Add getopt files here, except getopt.h.
	(BUILT_SOURCES, EXTRA_DIST, all-local, getopt.h): Support for getopt
	module.
	* getopt.h: Remove file.
	* getopt_.h: New file, from gnulib, with DLL_VARIABLE modifications.